# blue

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  THANKS  configure.ac
doc/: Makefile.am  PROJECT  VERSION
doc/man-pages/: Makefile.am
doc/reference-manual/: Makefile.am  doxygen.cfg
include/: Makefile.am  blue-border-parms.h  blue-color-parms.h  blue-design-angular-parms.h  blue-design-defaults-parms.h  blue-design-dimension-parms.h  blue-design-element-parms.h  blue-design-elements-parms.h  blue-design-elliptic-parms.h  blue-design-fill-style-parms.h  blue-design-fill-styles-parms.h  blue-design-layer-parms.h  blue-design-layers-parms.h  blue-design-line-parms.h  blue-design-line-style-parms.h  blue-design-line-style-segment-parms.h  blue-design-line-style-segments-parms.h  blue-design-line-styles-parms.h  blue-design-linear-parms.h  blue-design-parms.h  blue-design-point-parms.h  blue-design-polyline-parms.h  blue-design-radial-parms.h  blue-design-spline-parms.h  blue-design-text-parms.h  blue-design-tolerance-parms.h  blue-drawing-parms.h  blue-margins-parms.h  blue-paper-parms.h  blue-title-block-parms.h  blue-vertex-parms.h  blue-vertices-parms.h  blue.h  border-xml.h  border.h  design-anchor-location-type.h  design-angular-xml.h  design-angular.h  design-defaults-xml.h  design-defaults.h  (+58 more)
src/: Makefile.am  blue-border-parms.c  blue-border-parms.h  blue-border-usage.inc  blue-border.c  blue-color-parms.c  blue-color-parms.h  blue-color-usage.inc  blue-color.c  blue-design-angular-parms.c  blue-design-angular-parms.h  blue-design-angular-usage.inc  blue-design-angular.c  blue-design-defaults-parms.c  blue-design-defaults-parms.h  blue-design-defaults-usage.inc  blue-design-defaults.c  blue-design-dimension-parms.c  blue-design-dimension-parms.h  blue-design-dimension-usage.inc  blue-design-dimension.c  blue-design-element-parms.c  blue-design-element-parms.h  blue-design-element-usage.inc  blue-design-element.c  blue-design-elements-parms.c  blue-design-elements-parms.h  blue-design-elements-usage.inc  blue-design-elements.c  blue-design-elliptic-parms.c  blue-design-elliptic-parms.h  blue-design-elliptic-usage.inc  blue-design-elliptic.c  blue-design-fill-parms.c  blue-design-fill-style-parms.c  blue-design-fill-style-parms.h  blue-design-fill-style-usage.inc  blue-design-fill-style.c  blue-design-fill-styles-parms.c  blue-design-fill-styles-parms.h  (+155 more)
tests/: Makefile.am  rt.c
tools/: auto-timestamp  autoundo  commit  push
